# velvetmint-diagnostic-agent

./: .gitignore  DECISION.md  IDEAS.md  README.md  SETUP.md
00-shared/: SECRET-MAP.md  google-cloud-stack.md  hackathon-rules.md  judging-rubric.md  mcp-cheatsheet.md  trial-expiry-risk.md
01-fivetran-dtc-diagnostic/: README.md  SCAFFOLD-NOTES.md  architecture.md  build-plan.md  demo-script.md
01-fivetran-dtc-diagnostic/agent/: .env.example  README.md  pyproject.toml
01-fivetran-dtc-diagnostic/agent/scripts/: smoke_gemini.py
01-fivetran-dtc-diagnostic/agent/src/agent/: __init__.py  agent_loop.py  config.py  diagnostic_engine.py  main.py  prompts.py  tools.py
01-fivetran-dtc-diagnostic/frontend/: README.md
01-fivetran-dtc-diagnostic/infra/: README.md  cloudbuild.yaml
01-fivetran-dtc-diagnostic/mock-saas/: Dockerfile  README.md  pyproject.toml
01-fivetran-dtc-diagnostic/mock-saas/src/mock_saas/: __init__.py  main.py
02-arize-mystery-shopper/: DEVPOST_DRAFT.md  README.md  SCAFFOLD-NOTES.md  SETUP_CHECKLIST.md  VIDEO_SCRIPT.md  architecture.md  build-plan.md  demo-script.md
02-arize-mystery-shopper/agent/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  delta_report.json  judge.py  judge_prompts.py  main.py  prompts.py  pyproject.toml  scenarios.py
02-arize-mystery-shopper/agent/qa_agent/: __init__.py  agent.py  gemini_client.py  instrumentation.py  main.py  prompt.py
02-arize-mystery-shopper/agent/qa_agent/tools/: __init__.py  cluster.py  mutate.py  scenarios.py
02-arize-mystery-shopper/agent/scripts/: smoke_sut.py
02-arize-mystery-shopper/agent/sut/: __init__.py  agent.py  prompt.py  tools.py
02-arize-mystery-shopper/frontend/: Dockerfile  README.md  next.config.mjs  package.json  tailwind.config.ts
02-arize-mystery-shopper/frontend/app/: globals.css  layout.tsx  page.tsx
02-arize-mystery-shopper/frontend/components/: DeltaReport.tsx  PhoenixPanel.tsx  ThinkingPanel.tsx
02-arize-mystery-shopper/scripts/: deploy.sh  run_loop.py  seed_phoenix.py
03-mongodb-doctors-note/: DEVPOST_DRAFT.md  LEGAL-DISCLAIMER.md  README.md  RUNBOOK.md  SCAFFOLD-NOTES.md  architecture.md  build-plan.md  demo-script.md
03-mongodb-doctors-note/agent/: .dockerignore  .env.example  Dockerfile  README.md  extractor.py  main.py  orchestrator.py  prompts.py  pyproject.toml  responder.py  retriever.py  seed_data.py  verifier.py  vertex_ai.py
03-mongodb-doctors-note/agent/corpus/: literature.json
03-mongodb-doctors-note/agent/scripts/: ingest_pubmed.py
03-mongodb-doctors-note/agent/static/: index.html
03-mongodb-doctors-note/agent/tests/: test_orchestrator.py  test_responder_safety.py  test_retriever_integration.py  test_retriever_pipeline.py  test_verifier.py
03-mongodb-doctors-note/scripts/: deploy.sh
04-elastic-apartment-detective/: DEVPOST_DRAFT.md  Makefile  README.md  SETUP_CHECKLIST.md  SUBMISSION_RUNBOOK.md  VIDEO_SCRIPT.md  build-plan.md
04-elastic-apartment-detective/agent/: .env.example  Dockerfile  README.md  pyproject.toml
04-elastic-apartment-detective/agent/data/: tenant_signals.json
04-elastic-apartment-detective/agent/scripts/: elastic_setup.py  ingest_nyc.py  seed_tenant_signals.py  smoke_elastic_mcp.py  smoke_gemini.py  smoke_investigate.py
04-elastic-apartment-detective/agent/src/agent/: __init__.py  agent_loop.py  config.py  main.py  prompts.py  tools.py
04-elastic-apartment-detective/agent/tests/: test_agent_loop.py  test_main.py
04-elastic-apartment-detective/elastic/: agent_builder_tools.md
04-elastic-apartment-detective/frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
04-elastic-apartment-detective/frontend/app/: globals.css  layout.tsx  page.tsx
04-elastic-apartment-detective/frontend/components/: EvidenceStrip.tsx  RiskBrief.tsx  (+2 more)
04-elastic-apartment-detective/scripts/: deploy.sh
05-gitlab-onboarding-agent/: .dockerignore  .gitlab-ci.yml  Dockerfile  README.md  SCAFFOLD-NOTES.md  build-plan.md  demo-script.md
05-gitlab-onboarding-agent/agent/: .env.example  README.md  pyproject.toml
05-gitlab-onboarding-agent/agent/data/: runbooks.json  service-catalog.json
05-gitlab-onboarding-agent/agent/scripts/: smoke_gemini.py
05-gitlab-onboarding-agent/agent/src/agent/: __init__.py  agent_loop.py  config.py  grounding.py  main.py  prompts.py  scenario.py  tools.py  vertex_ai.py
05-gitlab-onboarding-agent/agent/static/: index.html
05-gitlab-onboarding-agent/agent/tests/: test_agent_loop.py  test_healthz.py  test_scenario.py
05-gitlab-onboarding-agent/infra/: cloudbuild.yaml
06-dynatrace-ai-cost-forecaster/: DEVPOST_DRAFT.md  Makefile  README.md  SETUP_CHECKLIST.md  VIDEO_SCRIPT.md  build-plan.md
06-dynatrace-ai-cost-forecaster/agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
06-dynatrace-ai-cost-forecaster/agent/scripts/: smoke_dynatrace_mcp.py  smoke_gemini.py  smoke_investigate.py
06-dynatrace-ai-cost-forecaster/agent/src/agent/: __init__.py  agent_loop.py  config.py  main.py  prompts.py  tools.py
06-dynatrace-ai-cost-forecaster/agent/tests/: test_agent_loop.py  test_healthz.py
06-dynatrace-ai-cost-forecaster/demo-app/: .env.example  Dockerfile  README.md  pyproject.toml
06-dynatrace-ai-cost-forecaster/demo-app/scripts/: traffic.py
06-dynatrace-ai-cost-forecaster/demo-app/src/refund_assistant/: __init__.py  assistant.py  main.py  telemetry.py
06-dynatrace-ai-cost-forecaster/demo-app/tests/: test_chat_stub.py
06-dynatrace-ai-cost-forecaster/frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
06-dynatrace-ai-cost-forecaster/scripts/: deploy.sh
synthetic-data/: README.md  STORY.md  generate.py
synthetic-data/google-ads/: campaigns.ndjson  insights.ndjson
synthetic-data/klaviyo/: campaigns.ndjson  flows.ndjson  profiles.ndjson
synthetic-data/meta-ads/: campaigns.ndjson  insights.ndjson
synthetic-data/shopify/: customers.ndjson
synthetic-data/stripe/: charges.ndjson  refunds.ndjson
synthetic-data/tiktok-ads/: ads.ndjson  insights.ndjson
synthetic-data/yotpo/: reviews.ndjson
(+9 files in other folders)
