[project]
name = "self-improving-qa-agent"
version = "0.1.0"
description = "Self-Improving QA Agent for the Arize @ Google Cloud Rapid Agent Hackathon. A Gemini ADK agent that audits another Gemini agent, reads its own Phoenix traces via MCP, and rewrites the SUT's system prompt to fix regressions — autonomously."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Self-Improving QA Agent Team" },
]

dependencies = [
    # Google Agent Development Kit (ADK). The Arize partner page requires a
    # code-owned runtime; ADK is the canonical choice and matches the
    # reference repo (https://github.com/Arize-ai/gemini-hackathon).
    "google-adk>=1.32.0",

    # Unified Google GenAI SDK. ADK talks to Gemini through this.
    "google-genai>=1.9.0",

    # OpenInference auto-instrumentor for ADK. Spans every LLM, tool, and
    # MCP call into Phoenix without per-call boilerplate.
    "openinference-instrumentation-google-adk>=0.1.11",

    # Arize Phoenix Python SDK. Provides phoenix.otel.register and the
    # Python helpers we use for batch experiment writes when the MCP path
    # is overkill.
    "arize-phoenix>=7.0",

    # OTel SDK + HTTP exporter. arize-phoenix pulls these transitively
    # but pinning lower bounds protects against version drift.
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",

    # Python MCP client. ADK's McpToolset re-exports the connection_params
    # wrappers but ``StdioServerParameters`` comes from the canonical mcp
    # package. Pinned lower bound matches the ADK reference.
    "mcp>=1.5",

    # FastAPI for the HTTP surface (SSE stream + audit endpoint).
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "sse-starlette>=2.1,<3.0",

    # Pydantic v2 for request/response validation.
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",

    # HTTP client (used by domain tools and judge replicas).
    "httpx>=0.27,<1.0",

    # Structured logging — keeps trace/span correlation readable in Cloud Run logs.
    "structlog>=24.1",

    # dotenv loader so local dev mirrors Cloud Run env injection.
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qa_agent", "sut"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
