[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apartment-detective-agent"
version = "0.1.0"
description = "Elastic Apartment Detective agent for the Google Cloud Rapid Agent Hackathon"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Apartment Detective Team" }]

dependencies = [
  "fastapi>=0.115.0,<1.0",
  "uvicorn[standard]>=0.32.0,<1.0",
  "sse-starlette>=2.1.0,<3.0",
  "pydantic>=2.9.0,<3.0",
  "pydantic-settings>=2.5.0,<3.0",
  "google-cloud-aiplatform>=1.71.0",
  "google-genai>=1.16.0",
  "httpx>=0.27.0,<1.0",
  "python-dotenv>=1.0.1,<2.0",
  "structlog>=24.4.0,<25.0",
  "tenacity>=9.0.0,<10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0",
  "pytest-asyncio>=0.24.0,<1.0",
  "ruff>=0.7.0,<1.0",
  "mypy>=1.12.0,<2.0",
]

[project.scripts]
apartment-detective-agent = "agent.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.hatch.build.targets.sdist]
include = ["src/agent", "README.md", "pyproject.toml", ".env.example"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
