[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refund-assistant-demo"
version = "0.1.0"
description = "Gemini refund assistant that emits OpenTelemetry for Agent Reliability Guard"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }

dependencies = [
  "fastapi>=0.115.0,<1.0",
  "uvicorn[standard]>=0.32.0,<1.0",
  "pydantic>=2.8.0,<3.0",
  "pydantic-settings>=2.5.0,<3.0",
  "google-genai>=1.16.0",
  "python-dotenv>=1.0.0,<2.0",
  "structlog>=24.1.0,<25.0",
  "opentelemetry-api>=1.28.0,<2.0",
  "opentelemetry-sdk>=1.28.0,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.28.0,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0,<1.0",
]

[project.scripts]
refund-assistant = "refund_assistant.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/refund_assistant"]

[tool.hatch.build.targets.sdist]
include = ["src/refund_assistant", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
